--- a/2장/02_04_조건문.ipynb
+++ b/2장/02_04_조건문.ipynb
@@ -106,7 +106,7 @@
    "source": [
     "today_temp = 30\n",
     "\n",
-    "if 0 < today_temp:\n",
+    "if today_temp > 0:\n",
     "    print(\"아이스 아메리카노\")\n",
     "else:\n",
     "    print(\"따뜻한 아메리카노\")"
@@ -144,9 +144,9 @@
    "source": [
     "today_temp = 30\n",
     "\n",
-    "if 0 < today_temp:\n",
+    "if 0 today_temp > 0:\n",
     "    print(\"아이스 아메리카노\")\n",
-    "elif 0 == today_temp:\n",
+    "elif today_temp == 0:\n",
     "    print(\"미지근한 아메리카노\")\n",
     "else:\n",
     "    print(\"따뜻한 아메리카노\")"
