--- a/2장/02_01_변수.ipynb
+++ b/2장/02_01_변수.ipynb
@@ -306,7 +306,7 @@
         "id": "k3nNBYvMYD2V"
       },
       "source": [
-        "# 2-1.3 변수 이름을 붙이는 규칙(2)\n",
+        "# 2.1.3 변수 이름을 붙이는 규칙(2)\n",
         " - 에러는 발생하지 않지만 알아 두어야 하는 규칙"
       ]
     },
@@ -593,401 +593,6 @@
       "source": [
         "z"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**type(변수이름)**\n",
-        "- 변수의 자료형을 반환하는 함수\n"
-      ],
-      "metadata": {
-        "id": "xnB5SyfaZIqL"
-      }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "i6qZB0dKYD2Y",
-        "outputId": "8168467a-50b8-49b8-c181-a523b9fc8754"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "str"
-            ]
-          },
-          "execution_count": 21,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "# 따옴표로 감싼 문자, 'Hello'와 \"Hello\"는 동일\n",
-        "a = 'Hello'\n",
-        "type(a)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**파이썬의 기본 자료형**\n",
-        "- 숫자(numeric): 정수(integer), 실수(float)\n",
-        "- 불리언(boolean): True, False\n",
-        "- 문자형(String)\n"
-      ],
-      "metadata": {
-        "id": "Q9cBkoMLZQyv"
-      }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "rZm42AwCYD2Y",
-        "outputId": "c5cb9b0d-3705-48d6-ac4c-7e026867f3a1"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "str"
-            ]
-          },
-          "execution_count": 22,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "# 따옴표로 감싼 숫자는 문자\n",
-        "b = '123'\n",
-        "type(b)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "P0Ac-_dSYD2Y",
-        "outputId": "138d2c8e-9b1f-45be-97f6-ba4d4a117bb7"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "str"
-            ]
-          },
-          "execution_count": 23,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "# 띄어쓰기가 포함된 문자열\n",
-        "c = \"How are you?\"\n",
-        "type(c)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "29f9v5mRYD2Z",
-        "outputId": "df36d702-e9a5-44f2-f2e3-4841f8220ed2"
-      },
-      "outputs": [
-        {
-          "ename": "SyntaxError",
-          "evalue": "EOL while scanning string literal (<ipython-input-26-1ed65e62d316>, line 1)",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-26-1ed65e62d316>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    x = \"Twinkle, twinkle, little star,\u001b[0m\n\u001b[1;37m                                       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
-          ]
-        }
-      ],
-      "source": [
-        "x = \"Twinkle, twinkle, little star,\n",
-        "How I wonder what you are!\n",
-        "Up above the world so high,\n",
-        "Like a diamond in the sky.\"\n",
-        "x"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "RbJhfBWSYD2Z",
-        "outputId": "d7cf9711-7e6e-4d23-eacd-9aa53e865f15"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "'Twinkle, twinkle, little star,\\nHow I wonder what you are!\\nUp above the world so high,\\nLike a diamond in the sky.'"
-            ]
-          },
-          "execution_count": 27,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "x = \"\"\"Twinkle, twinkle, little star,\n",
-        "How I wonder what you are!\n",
-        "Up above the world so high,\n",
-        "Like a diamond in the sky.\"\"\"\n",
-        "x"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "74Z9z_64YD2Z",
-        "outputId": "f76b7078-0f68-4440-93c5-09eb8d6be76b"
-      },
-      "outputs": [
-        {
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-31-4275bbce3138>, line 1)",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-31-4275bbce3138>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    y = \"He said, \"I love you.\"\"\u001b[0m\n\u001b[1;37m                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ],
-      "source": [
-        "y = \"He said, \"I love you.\"\"\n",
-        "y"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "OJogU9JAYD2Z",
-        "outputId": "b589f3d2-651a-4fb4-916d-71aaa6d7a64c"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "'He said, \"I love you.\"'"
-            ]
-          },
-          "execution_count": 32,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "y = 'He said, \"I love you.\"'\n",
-        "y"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "q9v4IiirYD2a",
-        "outputId": "8c7e6eea-5e66-403a-be32-06df4b2edadf"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "'He said, \"I love you.\"'"
-            ]
-          },
-          "execution_count": 33,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "y = \"He said, \\\"I love you.\\\"\"\n",
-        "y"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "80qJR9kkYD2a"
-      },
-      "source": [
-        "## 데이터 타입의 형 변환"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "- int(): 정수형으로 변환\n",
-        "- float(): 실수형으로 변환\n",
-        "- bool(): 불리언형으로 변환\n",
-        "- str(): 문자열로 변환\n"
-      ],
-      "metadata": {
-        "id": "P5E8OvLZZXSe"
-      }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "eXcf3zoqYD2a",
-        "outputId": "bcb191ac-b77d-42a7-bd12-1833834c5d4b"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "'2050'"
-            ]
-          },
-          "execution_count": 2,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "temperature = '20'\n",
-        "humidity = '50'\n",
-        "\n",
-        "temperature + humidity"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "aZLm6vSHYD2a",
-        "outputId": "0c38f558-0c20-4760-af53-c18550c8deff"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "70"
-            ]
-          },
-          "execution_count": 3,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "int(temperature) + int(humidity)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "10ihZQ0qYD2a"
-      },
-      "outputs": [],
-      "source": [
-        "a = 0\n",
-        "b = 500\n",
-        "c = ''\n",
-        "d = '하하호호'"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "XGgL09vNYD2a",
-        "outputId": "c4e2d1ab-5beb-4530-d4ad-04556a14b5be"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "execution_count": 21,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "bool(a)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "CrXIlmRyYD2b",
-        "outputId": "69c53517-2d76-476e-e884-08dd9e93b06d"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "execution_count": 22,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "bool(b)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "9b1fqQoRYD2b",
-        "outputId": "9e011763-4ea6-4451-a3dc-4f7eb1e3343a"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "execution_count": 23,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "bool(c)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "QIDpgXhVYD2b",
-        "outputId": "5894afe9-2c2b-48c7-a005-dd7a794e8e2c"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "execution_count": 16,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "bool(d)"
-      ]
     }
   ],
   "metadata": {
@@ -1023,6 +628,7 @@
     },
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     }
   },
