--- a/2장/02_05_반복문.ipynb
+++ b/2장/02_05_반복문.ipynb
@@ -617,7 +617,7 @@
         "menu = {\"고구마\": 200, \"떡볶이\": 600, \"라면\": 800}\n",
         "\n",
         "for key, value in menu.items():\n",
-        "    if(value > 500):\n",
+        "    if value > 500:\n",
         "        print(\"{}:X\".format(key))\n",
         "    else:\n",
         "        print(\"{}:O\".format(key))"
