--- a/1장/01_jupyter_notebook.ipynb
+++ b/1장/01_jupyter_notebook.ipynb
@@ -119,6 +119,24 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## 주요 메뉴"
+      ],
+      "metadata": {
+        "id": "2cdFmsdLwyex"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "![](https://jupyter-notebook.readthedocs.io/en/stable/_images/blank-notebook-ui.png)"
+      ],
+      "metadata": {
+        "id": "6EuMBSIXw25a"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "----\n",
         "# 마크다운"
       ],
@@ -311,15 +329,6 @@
       "metadata": {
         "id": "qWhPwNg7rtu7"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "AcKb73N1rq9R"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ],
   "metadata": {
