--- a/1장/01_jupyter_notebook.ipynb
+++ b/1장/01_jupyter_notebook.ipynb
@@ -117,6 +117,17 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "## 셀(Cell): 코드를 입력하고 실행"
+      ],
+      "metadata": {
+        "id": "x0sg8LJjPXkz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## 주요 메뉴"
@@ -133,6 +144,34 @@
       "metadata": {
         "id": "6EuMBSIXw25a"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 주요 단축키\n",
+        "\n",
+        "단축키 실행 전에 esc를 먼저 눌러주자\n",
+        "\n",
+        "- a(above): 현재 셀 위에 셀 추가\n",
+        "- b(below): 현재 셀 아래에 셀 추가\n",
+        "- dd(delete): 선택한 셀 삭제\n",
+        "- shift + enter: 셀 실행 후 활성화 셀을 아래로 이동"
+      ],
+      "metadata": {
+        "id": "Q1MlVjeSPsIm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 주요 단축키 연습\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ArXlFDpuPoMA"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
